--- a/ignite/templates/component/NAME.tsx.ejs
+++ b/ignite/templates/component/NAME.tsx.ejs
@@ -1,13 +1,13 @@
 ---
 patch:
   path: "app/components/index.ts"
-  append: "export * from \"./<%= props.pascalCaseName %>\"\n"
+  append: "export * from \'./<%= props.pascalCaseName %>\'\n"
   skip: <%= props.skipIndexFile %>
 ---
 import * as React from "react"
 import { StyleProp, TextStyle, View, ViewStyle } from "react-native"
 import { observer } from "mobx-react-lite"
-import { colors, typography } from "../theme"
+import { colors, typography } from "@/theme"
 import { Text } from "./Text"
 
 export interface <%= props.pascalCaseName %>Props {
