--- a/ignite/templates/screen/NAMEScreen.tsx.ejs
+++ b/ignite/templates/screen/NAMEScreen.tsx.ejs
@@ -1,16 +1,17 @@
 ---
 patch:
   path: "app/screens/index.ts"
-  append: "export * from './<%= props.pascalCaseName %>Screen'\n"
+  append: "export * from './<%= props.pascalCaseName %>Screen';\n"
   skip: <%= props.skipIndexFile %>
 ---
 import React, { FC } from 'react';
-import { observer } from 'mobx-react-lite';
 import { ViewStyle } from 'react-native';
+import { observer } from 'mobx-react-lite';
 import { StackScreenProps } from '@react-navigation/stack';
+import { useNavigation } from '@react-navigation/native';
+
 import { AppStackScreenProps } from '@/navigators';
 import { Screen, Text } from '@/components';
-import { useNavigation } from '@react-navigation/native';
 import { useTheme } from '@/theme';
 
 
